--- a/connector/elasticsearch-connector.tmpl.html
+++ b/connector/elasticsearch-connector.tmpl.html
@@ -11,7 +11,8 @@
   <link rel="stylesheet" href="elasticsearch-connector.min.css">
 <!--<!(endif)-->
 
-  <script src="https://connectors.tableau.com/libs/tableauwdc-1.1.1.js" type="text/javascript"></script>
+  <!--script src="https://connectors.tableau.com/libs/tableauwdc-1.1.1.js" type="text/javascript"></script-->
+  <script src="https://connectors.tableau.com/libs/tableauwdc-2.3.latest.js" type="text/javascript"></script>
 
 <!--(if target dev)><!-->    
   <script src="jquery.js" type="text/javascript"></script>
